# cpptraj

./: .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  Makefile_at  README  README.md  appveyor.yml  circle.yml  configure  configure_pytraj  get_library.sh  get_netcdf.sh  lgtm.yml  mkrelease
src/: .gitignore  Action.cpp  Action.h  ActionFrameCounter.cpp  ActionFrameCounter.h  ActionList.cpp  ActionList.h  ActionReference.cpp  ActionReference.h  ActionState.h  ActionTopWriter.cpp  ActionTopWriter.h  Action_AddAtom.cpp  Action_AddAtom.h  Action_Align.cpp  Action_Align.h  Action_Angle.cpp  Action_Angle.h  Action_AreaPerMol.cpp  Action_AreaPerMol.h  Action_AtomMap.cpp  Action_AtomMap.h  Action_AtomicCorr.cpp  Action_AtomicCorr.h  Action_AtomicFluct.cpp  Action_AtomicFluct.h  Action_AutoImage.cpp  Action_AutoImage.h  Action_Average.cpp  Action_Average.h  Action_AvgBox.cpp  Action_AvgBox.h  Action_AvgCoord.cpp  Action_AvgCoord.h  Action_Bounds.cpp  Action_Bounds.h  Action_Box.cpp  Action_Box.h  Action_Center.cpp  Action_Center.h  (+1348 more)
src/Cluster/: Algorithm.cpp  Algorithm.h  Algorithm_DBscan.cpp  Algorithm_DBscan.h  Algorithm_DPeaks.cpp  Algorithm_DPeaks.h  Algorithm_HierAgglo.cpp  Algorithm_HierAgglo.h  Algorithm_Kmeans.cpp  Algorithm_Kmeans.h  AssignRefsToClusters.cpp  AssignRefsToClusters.h  BestReps.cpp  BestReps.h  Binary_Cmatrix.cpp  Binary_Cmatrix.h  CMakeLists.txt  Centroid.h  CentroidArray.cpp  CentroidArray.h  Centroid_Coord.cpp  Centroid_Coord.h  Centroid_Multi.h  Centroid_Num.h  Cframes.cpp  Cframes.h  Cmatrix_Binary.cpp  Cmatrix_Binary.h  Cmatrix_NC.cpp  Cmatrix_NC.h  Control.cpp  Control.h  DBI.cpp  DBI.h  DrawGraph.cpp  DrawGraph.h  DynamicMatrix.cpp  DynamicMatrix.h  List.cpp  List.h  (+45 more)
src/Energy/: CMAP.cpp  CMAP.h  CMakeLists.txt  Calc_LJPME.cpp  Calc_LJPME.h  Calc_PME.cpp  Calc_PME.h  Ecalc_Nonbond.cpp  Ecalc_Nonbond.h  Ene_Angle.h  Ene_Bond.h  Ene_Decomp_Nonbond.h  Ene_Elec.h  Ene_Elec_Image.h  Ene_LJPME_6_12.h  Ene_LJ_12_6_4.h  Ene_LJ_6_12.h  Ene_Nonbond.h  EnergyDecomp_Ewald.cpp  EnergyDecomp_Ewald.h  EnergyDecomposer.cpp  EnergyDecomposer.h  ErfcFxn.cpp  ErfcFxn.h  EwaldCalc.h  EwaldCalc_Decomp.h  EwaldCalc_Decomp_LJCPME.cpp  EwaldCalc_Decomp_LJCPME.h  EwaldCalc_Decomp_LJPME.cpp  EwaldCalc_Decomp_LJPME.h  EwaldCalc_Decomp_PME.cpp  EwaldCalc_Decomp_PME.h  EwaldCalc_LJCPME.cpp  EwaldCalc_LJCPME.h  EwaldCalc_LJPME.cpp  EwaldCalc_LJPME.h  EwaldCalc_PME.cpp  EwaldCalc_PME.h  EwaldCalc_Regular.cpp  EwaldCalc_Regular.h  (+24 more)
src/Parm/: AssignParams.cpp  AssignParams.h  Bond_Params.cpp  Bond_Params.h  CMakeLists.txt  DihedralParmHolder.h  DihedralParmSet.cpp  DihedralParmSet.h  GB_Params.cpp  GB_Params.h  GetParams.cpp  GetParams.h  ImproperParmHolder.h  LJ1264_Params.cpp  LJ1264_Params.h  MainParmSet.cpp  MainParmSet.h  Makefile  Merge.cpp  Merge.h  ParameterSet.cpp  ParameterSet.h  ParmArray.h  ParmEnum.cpp  ParmEnum.h  ParmHolder.h  parmdepend  parmfiles
src/Structure/: AddIons.cpp  AddIons.h  BuildAtom.h  Builder.cpp  Builder.h  CMakeLists.txt  Chirality.cpp  Chirality.h  Creator.cpp  Creator.h  Disulfide.cpp  Disulfide.h  FunctionalGroup.cpp  FunctionalGroup.h  FxnGroupBuilder.cpp  FxnGroupBuilder.h  GenerateConnectivityArrays.cpp  GenerateConnectivityArrays.h  HisProt.cpp  HisProt.h  InternalCoords.cpp  InternalCoords.h  LeastSquaresPlane.cpp  LeastSquaresPlane.h  LinkAtom.h  Makefile  MetalCenterFinder.cpp  MetalCenterFinder.h  Model.cpp  Model.h  OldBuilder.cpp  OldBuilder.h  PdbCleaner.cpp  PdbCleaner.h  ResStatArray.h  RingFinder.cpp  RingFinder.h  Solvate.cpp  Solvate.h  StructureEnum.cpp  (+15 more)
src/arpack/: CMakeLists.txt  Makefile  README  arsecond.f  dgetv0.f  dnaitr.f  dnapps.f  dnaup2.f  dnaupd.f  dnconv.f  dneigh.f  dneupd.f  dngets.f  dsaitr.f  dsapps.f  dsaup2.f  dsaupd.f  dsconv.f  dseigt.f  dseupd.f  dsgets.f
src/cuda_kernels/: CMakeLists.txt  ConstantsG.cuh  GistCudaCalc.cu  GistCudaCalc.cuh  GistCudaSetup.cu  GistCudaSetup.cuh  Makefile  NonOrtho_dist2.cuh  core_kernels.cu  core_kernels.cuh  cudadepend  kernel_rdf.cu  kernel_rdf.cuh  kernel_wrappers.cu  kernel_wrappers.cuh  ortho_dist2.cuh  setup_routines.cpp
src/desmond/: README
src/dtrplugin/: README  dtrplugin.cxx
src/readline/: CMakeLists.txt  Makefile  Makefile_main  bind.c  complete.c  config.h  readlinedepend  terminal.c  tparam.c
src/tng/: CMakeLists.txt  Makefile  README  bwlzh.c  bwt.c  coder.c  dict.c  fixpoint.c  huffman.c  huffmem.c  lz77.c  merge_sort.c  mtf.c  rle.c  tng_compress.c  tng_io.c  tng_io_testing.c  vals16.c  warnmalloc.c  widemuldiv.c  xtc2.c  xtc3.c
src/vmdplugin/: README  dmsplugin.cpp  dtrplugin.cpp  dtrplugin.cxx  dtrplugin.hxx  molfile_plugin.h  vmddir.h
src/xdrfile/: AUTHORS  CMakeLists.txt  COPYING  Makefile  Makefile_main  README  VERSION  xdr_seek.h  xdrfile.c  xdrfile.h  xdrfile_c_test.c  xdrfile_trr.c  xdrfile_xtc.c  xdrfile_xtc.h
test/: 1d23.tip3p.lj1264.parm7  1d23.tip3p.rst7  2JJY-chainA-all.parm7  AFV.nc  AFV.parm7  CMakeLists.txt  CpptrajTest.sh  FtuFabI.NAD.TCL.nc  FtuFabI.NAD.TCL.parm7  Makefile  MasterTest.sh  README  Summary.sh  md.nc  mdXtal.inpcrd  mdXtal.nc  rGACC.full.nc  rGACC.full.parm7  spcbox.nc  spcbox.parm7  trpzip2.ff14SB.mbondi3.nc  trpzip2.ff14SB.mbondi3.parm7  tz2.nhe.nc  tz2.nhe.parm7  x6dky.parm7
test/Bench_Closest/: RunTest.sh  closest.in  ptraj.Closest.pdb.1
test/Bench_RMSD/: RunTest.sh
test/Test_2DRMS/: RunTest.sh  dme.dat.save  nofit.dat.save  rgacc.dat.save  rmsd.dat.save  rmsd.mass.dat.save  trp.dat.save
test/Test_AddAtom/: RunTest.sh  tz2.addatom.pdb.save  tz2.mask.dat.save  tz2.mg.mol2.save
test/Test_Align/: RunTest.sh
test/Test_AmbPDB/: RunTest.sh  fabi.pdb.save  out.pdb.save
test/Test_AnalysisRunAvg/: RunTest.sh  cumulative_avg.dat.save  running_avg.dat.save
test/Test_Analyze_Modes/: INPpYLYP.FF14SB.parm7  RunTest.sh  corr.dat.save  displ.dat.save  eigenval.dat.save  fluct.dat.save  modestest.2.crd.save  rmsip.dat.save
test/Test_AreaPerMol/: RunTest.sh  apm.dat.save
test/Test_AtomMap/: 6O3I_heme.mol2  RunTest.sh  atommap.dat.save  cg-amb.crds  cg-amb.topo  cg-chm.crds  cg-chm.topo  (+13 more)
(+1515 files in other folders)
